update modify scene editor

--- a/en/usage/video-editor/video-info.mdx
+++ b/en/usage/video-editor/video-info.mdx
@@ -5,7 +5,11 @@ description: ""
 
 To view information about each scene in Vipro, click on the i icon on the left Toolbar. In the image below, this icon is numbered 1
 
-<img src="/en/images/usage/video-editor/video-info.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
+<img
+  src="/en/images/usage/video-editor/video-info.jpeg"
+  alt="Vipro Studio on web"
+  className="rounded-lg"
+/>
 
 On this details screen, you can:
 
@@ -16,13 +20,41 @@ On this details screen, you can:
 
 After clicking on a chapter's details, Vipro will display a representative image for each scene, as well as the storyline content for that scene.
 
-<img src="/en/images/usage/video-editor/chapter-screens.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
+<img
+  src="/en/images/usage/video-editor/chapter-screens.jpeg"
+  alt="Vipro Studio on web"
+  className="rounded-lg"
+/>
 
 ## Edit the script of the video
 
-- You can also hover over each scene's content, click the Edit button to modify that content, then click `Update` to update the content. Note that when changing content, Vipro will regenerate the Voice over and additional costs will be incurred.
+<iframe
+  src="https://www.youtube.com/embed/I2JnUoIE5R8"
+  width="100%"
+  height="400"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
-<img src="/en/images/usage/video-editor/modify-scene.jpg" alt="Vipro Studio on web" className="rounded-lg" />
+You can also move the mouse over the content of each scene, Vipro will allow you to:
+
+- Edit the scene content: click the Edit button to modify that content
+- Delete the scene: click the delete button on the right of each scene
+- Add a scene before: click the create button at the top right of each scene
+- Add a scene after: click the create button at the bottom right of each scene
+
+Then, update the scene content and click `Update` to save the content.
+
+<img
+  src="/en/images/usage/video-editor/modify-scene.jpeg"
+  alt="Modify scenes"
+  className="rounded-lg"
+/>
+
+Note:
+
+- When changing content, Vipro will regenerate the Voice over and additional costs will be incurred.
+- When adding a scene, Vipro will create an image for the new scene and additional costs will be incurred.
 
 ## Adjust Video Speed
 
@@ -33,4 +65,8 @@ You have two ways to make changes:
 - Drag the speed slider to adjust
 - Or drag the duration slider to adjust video time. The speed slider will change correspondingly
 
-<img src="/en/images/usage/video-editor/info-speed.jpg" alt="Vipro Studio on web" className="rounded-lg" />
+<img
+  src="/en/images/usage/video-editor/info-speed.jpg"
+  alt="Vipro Studio on web"
+  className="rounded-lg"
+/>
