--- a/vi/usage/video-editor/video-info.mdx
+++ b/vi/usage/video-editor/video-info.mdx
@@ -5,7 +5,11 @@ description: ""
 
 Để xem thông tin từng phân cảnh trong Vipro, bạn bấm vào biểu tượng hình chữ i trên thanh Công Cụ Bên tay trái. Trong hình ảnh dưới đây, biểu tượng này được đánh số 1
 
-<img src="/vi/images/usage/video-editor/video-info.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
+<img
+  src="/vi/images/usage/video-editor/video-info.jpeg"
+  alt="Vipro Studio trên web"
+  className="rounded-lg"
+/>
 
 Tại màn hình chi tiết này, bạn có thể
 
@@ -16,13 +20,41 @@ Tại màn hình chi tiết này, bạn có thể
 
 Sau khi bạn bấm vào chi tiết một chương, Vipro sẽ hiển thị ảnh đại diện cho mỗi phân cảnh, cũng như nội dung cốt chuyện của phân cảnh đó.
 
-<img src="/vi/images/usage/video-editor/chapter-screens.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
+<img
+  src="/vi/images/usage/video-editor/chapter-screens.jpeg"
+  alt="Vipro Studio trên web"
+  className="rounded-lg"
+/>
 
 ## Chỉnh sửa lại kịch bản của video
 
-- Bạn cũng có thể di chuyển chuột vào nội dung từng phân cảnh, bấm nút Edit để chỉnh sửa lại nội dung đó, sau đó bấm `Cập nhật` để cập nhật nội dung. Lưu ý rằng khi thay đổi nội dung, Vipro sẽ sinh lại Voice over và sẽ phát sinh thêm chi phí.
+<iframe
+  src="https://www.youtube.com/embed/I2JnUoIE5R8"
+  width="100%"
+  height="400"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
-<img src="/vi/images/usage/video-editor/modify-scene.jpg" alt="Vipro Studio trên web" className="rounded-lg" />
+Bạn cũng có thể di chuyển chuột vào nội dung từng phân cảnh, Tại đây Vipro sẽ cho phép bạn:
+
+- Chỉnh sửa nội dung phân cảnh: bấm nút Edit để chỉnh sửa lại nội dung đó
+- Xoá phân cảnh: bấm vào nút xoá ở bên phải mỗi phân cảnh
+- Thêm một phân cảnh vào đằng trước: bấm vào nút tạo ở góc phải trên mỗi phân cảnh
+- Thêm một phân cảnh vào phía sau: bấm vào nút tạo ở góc phải dưới mỗi phân cảnh
+
+Sau đó, cập nhật nội dung phân cảnh và bấm `Cập nhật` lưu lại nội dung.
+
+<img
+  src="/vi/images/usage/video-editor/modify-scene.jpeg"
+  alt="Vipro Studio trên web"
+  className="rounded-lg"
+/>
+
+Lưu ý:
+
+- Khi thay đổi nội dung, Vipro sẽ sinh lại giọng thuyết minh và sẽ phát sinh thêm chi phí.
+- Khi thêm phân cảnh, Vipro sẽ tạo ảnh cho phân cảnh mới và sẽ phát sinh chi phí.
 
 ## Chỉnh sửa tốc độ của video
 
@@ -33,4 +65,8 @@ Thay đổi tốc độ phát của video để điều chỉnh thời lượng 
 - Kéo thanh tốc độ để điều chỉnh
 - Hoặc kéo thanh thời lượng để chỉnh thời gian video. Thanh tốc độ sẽ thay đổi theo tương ứng
 
-<img src="/vi/images/usage/video-editor/info-speed.jpg" alt="Vipro Studio trên web" className="rounded-lg" />
+<img
+  src="/vi/images/usage/video-editor/info-speed.jpg"
+  alt="Vipro Studio trên web"
+  className="rounded-lg"
+/>
