--- a/en/usage/video-editor/edit-scene/image.mdx
+++ b/en/usage/video-editor/edit-scene/image.mdx
@@ -10,9 +10,9 @@ There are 2 ways to edit a scene in Vipro. When you hover over the scene you wan
 Click the `Quick Regenerate Image` button to regenerate the image. Sometimes, when the AI-generated image isn't satisfactory or has errors, this is the quickest way to regenerate the image.
 
 <img
-  src='/en/images/usage/video-editor/scene-editor/image/edit-scene-1.jpg'
-  alt='Quick regenerate image'
-  className='rounded-lg'
+  src="/en/images/usage/video-editor/scene-editor/image/edit-scene-1.jpg"
+  alt="Quick regenerate image"
+  className="rounded-lg"
 />
 
 ## Method 2: Detailed Scene Edit
@@ -22,9 +22,9 @@ Click the `Edit Scene` button for more detailed scene editing. Here you have man
 - Regenerate image with AI: You can adjust the prompt to create images as desired. Currently, image prompts only support English. Change the prompt and click `Regenerate Image` to start regenerating.
 
 <img
-  src='/en/images/usage/video-editor/scene-editor/image/edit-scene-prompt.jpg'
-  alt='Regenerate image with AI'
-  className='rounded-lg'
+  src="/en/images/usage/video-editor/scene-editor/image/edit-scene-prompt.jpg"
+  alt="Regenerate image with AI"
+  className="rounded-lg"
 />
 
 - Use Stock Images: You can select Stock images for the scene in the `Stock` Tab on the right corner. Vipro AI will automatically fill in the search content for you, or you can enter your own search content and click `Search` to find images, then select a desired image and click `Done`.
@@ -32,17 +32,17 @@ Click the `Edit Scene` button for more detailed scene editing. Here you have man
 Note that Stock images are only suitable for real-person content, not suitable for drawing or animation styles.
 
 <img
-  src='/en/images/usage/video-editor/scene-editor/image/edit-scene-stock.jpg'
-  alt='Use Stock images'
-  className='rounded-lg'
+  src="/en/images/usage/video-editor/scene-editor/image/edit-scene-stock.jpg"
+  alt="Use Stock images"
+  className="rounded-lg"
 />
 
 - Use images from computer: You can select images from your computer for the scene in the `Upload` Tab on the right corner. Then drag and drop your images or click the button to upload an image from your computer. Click `Done` to complete.
 
 <img
-  src='/en/images/usage/video-editor/scene-editor/image/edit-scene-upload.jpg'
-  alt='Use images from computer'
-  className='rounded-lg'
+  src="/en/images/usage/video-editor/scene-editor/image/edit-scene-upload.jpg"
+  alt="Use images from computer"
+  className="rounded-lg"
 />
 
 ### Smart Prompt Feature
@@ -50,9 +50,9 @@ Note that Stock images are only suitable for real-person content, not suitable f
 As mentioned in the previous section, from version _1.3_, Vipro Studio has added the smart prompt feature to help you easily edit image prompts in Vietnamese.
 
 <img
-  src='/en/images/usage/video-editor/scene-editor/image/smart-prompt.jpeg'
-  alt='Smart Prompt Feature'
-  className='rounded-lg'
+  src="/en/images/usage/video-editor/scene-editor/image/smart-prompt.jpeg"
+  alt="Smart Prompt Feature"
+  className="rounded-lg"
 />
 
 - When using smart prompt, you only need to make requests in Vietnamese, Vipro will automatically convert to create appropriate images
@@ -60,7 +60,42 @@ As mentioned in the previous section, from version _1.3_, Vipro Studio has added
 - You can easily switch from smart prompt to traditional prompt by clicking the toggle in the right corner
 
 <img
-  src='/en/images/usage/video-editor/scene-editor/image/toggle-smart-prompt.jpeg'
-  alt='Toggle prompt'
-  className='rounded-lg'
+  src="/en/images/usage/video-editor/scene-editor/image/toggle-smart-prompt.jpeg"
+  alt="Toggle prompt"
+  className="rounded-lg"
 />
+
+### Asset Management
+
+<iframe
+  src="https://www.youtube.com/embed/f6DA_rfx-W8"
+  width="100%"
+  height="400"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
+
+With Vipro Studio, you have access to all images/videos you have ever created.
+
+To access the asset library, please click on the edit scene button
+
+<img
+  src="/en/images/usage/video-editor/scene-editor/image/edit-scene-thumb.jpeg"
+  alt="Edit scene"
+  className="rounded-lg"
+/>
+Then, click on the library tab on the edit scene window
+
+<img
+  src="/en/images/usage/video-editor/scene-editor/image/assets.jpeg"
+  alt="Asset library"
+  className="rounded-lg"
+/>
+
+From here, you can:
+
+- View all images/videos you have created
+- View details of each image/video
+- Search for images/videos
+- View the history of images/videos of the current scene
+- Select the version of image/video you want to use for the current scene
