--- a/vi/usage/video-editor/edit-scene/image.mdx
+++ b/vi/usage/video-editor/edit-scene/image.mdx
@@ -10,9 +10,9 @@ Có 2 cách để chỉnh sửa phân cảnh trong Vipro. Khi bạn di chuột l
 Bấm vào nút `Tạo lại nhanh hình ảnh` để tạo lại hình ảnh. Đôi khi, hình ảnh của AI tạo ra không được như ý, hoặc là bị lỗi, thì đây là cách nhanh nhất để bạn có thể tạo lại hình ảnh.
 
 <img
-  src='/vi/images/usage/video-editor/scene-editor/image/edit-scene-1.jpg'
-  alt='Tạo lại nhanh hình ảnh'
-  className='rounded-lg'
+  src="/vi/images/usage/video-editor/scene-editor/image/edit-scene-1.jpg"
+  alt="Tạo lại nhanh hình ảnh"
+  className="rounded-lg"
 />
 
 ## Cách 2: Chỉnh sửa phân cảnh chi tiết
@@ -22,9 +22,9 @@ Bấm vào nút `Chỉnh sửa phân cảnh` để chỉnh sửa phân cảnh ch
 - Tạo lại hình ảnh bằng AI: Bạn có thể điều chỉnh prompt để tạo hình ảnh theo ý muốn. Hiện tại prompt tạo ảnh chỉ hỗ trợ tiếng Anh. Thay đổi prompt và bấm `Tạo lại hình ảnh` để bắt đầu tạo lại.
 
 <img
-  src='/vi/images/usage/video-editor/scene-editor/image/edit-scene-prompt.jpg'
-  alt='Tạo lại hình ảnh bằng AI'
-  className='rounded-lg'
+  src="/vi/images/usage/video-editor/scene-editor/image/edit-scene-prompt.jpg"
+  alt="Tạo lại hình ảnh bằng AI"
+  className="rounded-lg"
 />
 
 - Sử dụng ảnh Stock: Bạn có thể chọn ảnh Stock để sử dụng cho phân cảnh tại Tab `Stock` ở góc bên phải. Vipro AI sẽ tự động điền sẵn nội dung tìm kiếm cho bạn, hoặc bạn có thể tự điền nội dung tìm kiếm và bấm `Tìm kiếm` để tìm kiếm ảnh, sau đó chọn 1 ảnh ưng ý và bấm `Hoàn thành`.
@@ -32,17 +32,17 @@ Bấm vào nút `Chỉnh sửa phân cảnh` để chỉnh sửa phân cảnh ch
 Lưu ý là ảnh Stock chỉ phù hợp với các nội dung người thật, không phù hợp với các phong cách hình vẽ hoặc hoạt hình.
 
 <img
-  src='/vi/images/usage/video-editor/scene-editor/image/edit-scene-stock.jpg'
-  alt='Sử dụng ảnh Stock'
-  className='rounded-lg'
+  src="/vi/images/usage/video-editor/scene-editor/image/edit-scene-stock.jpg"
+  alt="Sử dụng ảnh Stock"
+  className="rounded-lg"
 />
 
 - Sử dụng ảnh từ máy tính: Bạn có thể chọn ảnh từ máy tính để sử dụng cho phân cảnh tại Tab `Tải lên` ở góc bên phải. Sau đó kéo thả ảnh trên máy của bạn vào hoặc bấm nút để tải 1 ảnh từ máy tính của bạn lên. Bấm `Hoàn thành` để hoàn tất.
 
 <img
-  src='/vi/images/usage/video-editor/scene-editor/image/edit-scene-upload.jpg'
-  alt='Sử dụng ảnh từ máy tính'
-  className='rounded-lg'
+  src="/vi/images/usage/video-editor/scene-editor/image/edit-scene-upload.jpg"
+  alt="Sử dụng ảnh từ máy tính"
+  className="rounded-lg"
 />
 
 ### Chức năng Smart Prompt
@@ -50,9 +50,9 @@ Lưu ý là ảnh Stock chỉ phù hợp với các nội dung người thật, 
 Như đã đề cập ở phần trước, Từ phiên bản _1.3_, Vipro Studio đã đưa thêm chức năng smart prompt để bạn có thể dễ dàng chỉnh sửa image prompt bằng tiếng Việt.
 
 <img
-  src='/vi/images/usage/video-editor/scene-editor/image/smart-prompt.jpeg'
-  alt='Chức năng Smart Prompt'
-  className='rounded-lg'
+  src="/vi/images/usage/video-editor/scene-editor/image/smart-prompt.jpeg"
+  alt="Chức năng Smart Prompt"
+  className="rounded-lg"
 />
 
 - Khi sử dụng prompt thông minh, bạn chỉ cần đưa ra yêu cầu bằng tiếng Việt, Vipro sẽ tự động chuyển đổi để tạo hình ảnh phù hợp
@@ -60,7 +60,43 @@ Như đã đề cập ở phần trước, Từ phiên bản _1.3_, Vipro Studio
 - Bạn có thể dễ dàng chuyển đổi từ prompt thông minh sang prompt truyền thống bằng cách ấn vào công tắc ở góc phải
 
 <img
-  src='/vi/images/usage/video-editor/scene-editor/image/toggle-smart-prompt.jpeg'
-  alt='Chuyển đổi prompt'
-  className='rounded-lg'
+  src="/vi/images/usage/video-editor/scene-editor/image/toggle-smart-prompt.jpeg"
+  alt="Chuyển đổi prompt"
+  className="rounded-lg"
 />
+
+### Quản lý thư viện hình ảnh
+
+<iframe
+  src="https://www.youtube.com/embed/f6DA_rfx-W8"
+  width="100%"
+  height="400"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
+
+Với Vipro Studio, bạn có quyền truy cập vào tất cả hình ảnh/video mà bạn đã từng tạo ra.
+
+Để truy cập vào thư viện hình ảnh, bạn hãy ấn vào nút chỉnh sửa chi tiết nhé
+
+<img
+  src="/vi/images/usage/video-editor/scene-editor/image/edit-scene-thumb.jpeg"
+  alt="Chỉnh sửa chi tiết"
+  className="rounded-lg"
+/>
+
+Sau đó, ấn vào tab thư viện trên cửa sổ chỉnh sửa
+
+<img
+  src="/vi/images/usage/video-editor/scene-editor/image/asset.jpeg"
+  alt="Thư viện hình ảnh"
+  className="rounded-lg"
+/>
+
+Tại đây bạn có thể:
+
+- Xem tất cả hình ảnh/video mà bạn đã tạo ra
+- Xem chi tiết từng hình ảnh/video
+- Tìm kiếm hình ảnh/video
+- Xem lịch sử hình ảnh/video của phân cảnh hiện tại
+- Lựa chọn phiên bản hình ảnh/video mà bạn muốn sử dụng cho phân cảnh hiện tại
