update video service list

--- a/en/introduction/vipro-studio/introduction.mdx
+++ b/en/introduction/vipro-studio/introduction.mdx
@@ -35,10 +35,13 @@ Vipro Studio provides a solution that eliminates the need to switch between diff
   - Vipro Stock Video
   - Midjourney
 - Video creation:
-  - Luma Dream Machine
-  - Hunyuan
-  - Kling
+  - Lightricks Video AI
+  - Kling/Kling Pro
   - Hailuo AI Minimax
+  - Skyreels
+  - Luma Dream Machine
+  - Hunyuan Video
+  - Wan2.1 Video
 - Voice-over:
   - ElevenLabs
   - OpenAI Text To Speech
