add lipsync avatar doc

--- a/en/introduction/vipro-studio/introduction.mdx
+++ b/en/introduction/vipro-studio/introduction.mdx
@@ -35,6 +35,7 @@ Vipro Studio provides a solution that eliminates the need to switch between diff
   - Vipro Stock Video
   - Midjourney
 - Video creation:
+  - Ken Burns Effect
   - Lightricks Video AI
   - Kling/Kling Pro
   - Hailuo AI Minimax
@@ -42,6 +43,8 @@ Vipro Studio provides a solution that eliminates the need to switch between diff
   - Luma Dream Machine
   - Hunyuan Video
   - Wan2.1 Video
+  - Vidu
+- Lipsync avatar
 - Voice-over:
   - ElevenLabs
   - OpenAI Text To Speech
