update affiliate doc

--- a/vi/partners/affiliate-program.mdx
+++ b/vi/partners/affiliate-program.mdx
@@ -46,9 +46,10 @@ Với mỗi cộng tác viên, bạn sẽ có 3 loại báo cáo
 
 ### 2.1. Bảng điều khiển CTV
 
-Bảng điều khiển CTV sẽ có 4 phần chính: 
+Bảng điều khiển CTV sẽ có 5 phần chính: 
 
 * Danh sách mã giới thiệu
+* Bảng tổng quan 
 * Biểu đồ user đăng ký theo thời gian
 * Biểu đồ số lượng đơn hàng theo thời gian
 * Biểu đồ giá trị đơn hàng theo thời gian
@@ -60,10 +61,8 @@ Bảng điều khiển CTV sẽ có 4 phần chính:
 Tại đây, bạn có thể quản lý toàn bộ danh sách mã giới thiệu của mình. Mỗi mã giới thiệu sẽ có 
 
 * **Mã giới thiệu**: Mã giới thiệu mà bạn tạo hoặc Vipro admin tạo cho bạn
+* **Hoa hồng**: Tỉ lệ hoa hồng của mã giới thiệu
 * **Đăng ký**: Số lượng khách hàng đã đăng ký mã giới thiệu của bạn
-* **Giới hạn**: Số lượng tối đa khách hàng được sử dụng mã giới thiệu
-* **Đã dùng**: Số lượng đơn hàng đã được sử dụng trên mã giới thiệu
-* **Còn lại**: Số lượng còn lại của mã giới thiệu
 * **Thanh toán chờ**: Số lượng đơn hàng được tạo nhưng chưa thanh toán
 * **Thanh toán hoàn tất**: Số lượng đơn hàng đã thanh toán
 * **Số tiền hoàn tất**: Tổng số tiền đã thanh toán
@@ -87,13 +86,21 @@ Bạn có thể download mã QR cho mã giới thiệu của mình bằng cách 
 
 Ngoài ra, bạn có thể sử dụng link sau: `https://vipro.studio/discount/<mã-giới thiệu>` để chia sẻ cho khách hàng của mình.
 
-### 2.2. Biểu đồ user đăng ký theo thời gian
+### 2.2 Bảng tổng quan
+
+Bảng tổng quan sẽ thể hiện thông tin dữ liệu đơn hàng của bạn dựa theo bộ lọc. 
+
+Bảng tổng quan sẽ được chia thành nhiều nhà cung cấp dịch vụ thanh toán, mỗi nhà cung cấp sẽ có loại tiền khác nhau
+
+<img src="/vi/images/partners/aff-13.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
+
+### 2.3. Biểu đồ user đăng ký theo thời gian
 
 Biểu đồ này thể hiện số lượng user đăng ký theo mã giới thiệu của bạn từng ngày
 
 <img src="/vi/images/partners/aff-8.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
 
-### 2.3. Biểu đồ số lượng đơn hàng theo thời gian
+### 2.4. Biểu đồ số lượng đơn hàng theo thời gian
 
 Biểu đồ này thể hiện số lượng đơn hàng được tạo trên Vipro Studio với mã giới thiệu của bạn theo từng ngày
 
@@ -102,7 +109,7 @@ Biểu đồ này thể hiện số lượng đơn hàng được tạo trên Vi
 
 <img src="/vi/images/partners/aff-9.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
 
-### 2.4. Biểu đồ giá trị đơn hàng theo thời gian
+### 2.5. Biểu đồ giá trị đơn hàng theo thời gian
 
 Biểu đồ này thể hiện giá trị đơn hàng được tạo trên Vipro Studio với mã giới thiệu của bạn theo từng ngày
 
