--- a/vi/partners/affiliate-program.mdx
+++ b/vi/partners/affiliate-program.mdx
@@ -70,15 +70,13 @@ Tại đây, bạn có thể quản lý toàn bộ danh sách mã giới thiệu
 * **Chia sẻ với**: Bạn có thể chia sẻ mã giới thiệu với cộng tác viên khác để người đó có thể theo dõi cùng với bạn
 * **Mã QR**: Mã QR chứa link có nhúng kèm mã giới thiệu của bạn
 
-**Chú ý** Khi click vào mã giới thiệu bất kỳ, hệ thống sẽ lọc dữ liệu dựa theo các mã đó
-
-#### 2.1.2 Tạo mã giới thiệu mới
+**Tạo mã giới thiệu mới**
 
 Để tạo mã giới thiệu mới, bạn có thể ấn vào nút "Tạo mã", sau đó điền mã giới thiệu và ấn vào nút "Tạo"
 
 <img src="/vi/images/partners/aff-11.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
 
-#### 2.1.3 Download mã QR cho mã giới thiệu
+**Download mã QR cho mã giới thiệu**
 
 Bạn có thể download mã QR cho mã giới thiệu của mình bằng cách ấn vào nút "QR code" trong danh sách sau đó tải mã QR về máy của bạn
 
@@ -86,21 +84,23 @@ Bạn có thể download mã QR cho mã giới thiệu của mình bằng cách 
 
 Ngoài ra, bạn có thể sử dụng link sau: `https://vipro.studio/discount/<mã-giới thiệu>` để chia sẻ cho khách hàng của mình.
 
-### 2.2 Bảng tổng quan
+**Chú ý** Khi click vào mã giới thiệu bất kỳ, hệ thống sẽ lọc dữ liệu dựa theo các mã đó
+
+#### 2.1.2 Bảng báo cáo tổng quan
 
 Bảng tổng quan sẽ thể hiện thông tin dữ liệu đơn hàng của bạn dựa theo bộ lọc. 
 
-Bảng tổng quan sẽ được chia thành nhiều nhà cung cấp dịch vụ thanh toán, mỗi nhà cung cấp sẽ có loại tiền khác nhau
+Bảng tổng quan sẽ được chia thành nhiều nhà cung cấp dịch vụ thanh toán, mỗi nhà cung cấp sẽ có thể có các loại tiền khác nhau
 
 <img src="/vi/images/partners/aff-13.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
 
-### 2.3. Biểu đồ user đăng ký theo thời gian
+#### 2.1.3 Biểu đồ user đăng ký theo thời gian
 
 Biểu đồ này thể hiện số lượng user đăng ký theo mã giới thiệu của bạn từng ngày
 
 <img src="/vi/images/partners/aff-8.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
 
-### 2.4. Biểu đồ số lượng đơn hàng theo thời gian
+#### 2.1.4 Biểu đồ số lượng đơn hàng theo thời gian
 
 Biểu đồ này thể hiện số lượng đơn hàng được tạo trên Vipro Studio với mã giới thiệu của bạn theo từng ngày
 
@@ -109,7 +109,7 @@ Biểu đồ này thể hiện số lượng đơn hàng được tạo trên Vi
 
 <img src="/vi/images/partners/aff-9.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
 
-### 2.5. Biểu đồ giá trị đơn hàng theo thời gian
+#### 2.1.5 Biểu đồ giá trị đơn hàng theo thời gian
 
 Biểu đồ này thể hiện giá trị đơn hàng được tạo trên Vipro Studio với mã giới thiệu của bạn theo từng ngày
 
@@ -117,6 +117,22 @@ Biểu đồ này thể hiện giá trị đơn hàng được tạo trên Vipro
 * **Tổng số tiền** Tổng giá trị thanh toán được tạo
 
 <img src="/vi/images/partners/aff-10.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
+
+### 2.2. Người dùng
+
+Người dùng sẽ thể hiện danh sách các khách hàng đã được giới thiệu bởi bạn
+
+<img src="/vi/images/partners/aff-14.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
+
+### 2.3. Đơn hàng
+
+Đơn hàng sẽ thể hiện danh sách các đơn hàng đã được tạo trên Vipro Studio với mã giới thiệu của bạn
+
+<img src="/vi/images/partners/aff-15.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
+
+
+
+
 
 ## 3. Thanh toán hoa hồng
 
